--- a/style.css
+++ b/style.css
@@ -42,14 +42,18 @@ div {
 }
 
 a {
-  display: block;
+  display: inline;
   color: black;
   margin: 2px 0;
   width: fit-content;
   text-decoration: underline;
 }
 a:hover {
-  color: #8e8e8e;
+  /* color: #8e8e8e; */
+  transition: color 0.1s ease;
+}
+a.nav:hover {
+  color: #a15807;
 }
 p {
   margin: 0;
