--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 #proj-container-grid,
 #proj-container-full {
   display: none;
-  gap: 2rem;
-  margin-top: 1rem;
+  margin: 1.75vh;
 }
 
 #proj-container-grid {
   display: flex;
   justify-content: space-between;
-  gap: 0;
+  gap: 1rem;
+
   flex-direction: row;
 }
 
@@ -16,7 +16,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3.5vh;
 }
 
 #proj-container-full {
@@ -27,8 +27,8 @@
 
 .project {
   align-items: center;
-  padding: 1rem;
-  max-height: 100vh;
+  max-height: 96.5vh;
+  padding-bottom: 3.5vh;
 }
 
 .title {
@@ -37,7 +37,8 @@
 }
 .img-cover {
   border-radius: 0.75rem;
-  min-height: 50vh;
+  min-height: 60vh;
+  margin-bottom: 0.5rem;
 }
 #switch {
   display: flex;
