--- a/index.css
+++ b/index.css
@@ -1,17 +1,13 @@
-#proj-container-grid,
-#proj-container-full {
-  display: none;
-  margin: 1.75vh;
-}
-
+/* GRID */
 #proj-container-grid {
+  margin: 1.75vh;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
 
   flex-direction: row;
 }
-
+/* colonne */
 #proj-container-grid > div {
   flex: 1;
   display: flex;
@@ -19,6 +15,7 @@
   gap: 3.5vh;
 }
 
+/* FULL */
 #proj-container-full {
   display: flex;
   flex-direction: column;
@@ -27,19 +24,34 @@
 
 .project {
   align-items: center;
-  max-height: 96.5vh;
+  max-height: 100vh;
   padding-bottom: 3.5vh;
+}
+
+.img-cover {
+  height: auto;
+  min-height: 60vh;
+  margin-bottom: 0.5rem;
+}
+
+#proj-container-full > .large {
+  padding: 1rem;
+}
+
+/* #proj-container-full > .large > img {
+  border-radius: 0.75rem;
+} */
+
+#proj-container-full > .contain > img {
+  object-fit: contain !important;
+  /* border-radius: 0.75rem; */
 }
 
 .title {
   font-size: 1.75rem;
   font-family: "century-old-style-std", serif;
 }
-.img-cover {
-  border-radius: 0.75rem;
-  min-height: 60vh;
-  margin-bottom: 0.5rem;
-}
+
 #switch {
   display: flex;
   flex-direction: row;
