--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 3.5vh;
+  gap: 4.5vh;
 }
 
 /* FULL */
@@ -31,12 +31,17 @@
 .img-cover {
   height: auto;
   object-fit: cover;
-  /* min-height: 50vh; */
+  min-height: 60vh;
   margin-bottom: 0.5rem;
 }
 
-#proj-container-grid > .large {
-  height: auto;
+#proj-container-grid img {
+  border-radius: 0.75rem;
+}
+#proj-container-col-1 .project:nth-child(odd) .img-cover,
+#proj-container-col-3 .project:nth-child(even) .img-cover,
+#proj-container-col-3 .project:nth-child(odd) .img-cover {
+  min-height: 45vh;
 }
 
 #proj-container-full > .large {
