--- a/project.css
+++ b/project.css
@@ -5,7 +5,6 @@
   margin-top: 12.5vh;
   height: 60vh;
 }
-
 .proj-el {
   display: flex;
   flex-direction: column;
@@ -14,10 +13,10 @@
   line-height: 1.25rem;
 }
 
+/* ELEMENTS */
 #proj-title-descr {
   max-width: 90%;
 }
-
 #proj-title {
   line-height: 3rem;
   font-size: 2.5rem;
@@ -26,10 +25,26 @@
 #info {
   margin-bottom: 3vh;
 }
-
 #proj-info {
   max-width: 75%;
   gap: 3vh;
+}
+.gallery-item > img {
+  height: 110vh;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+}
+.gallery-item {
+  width: 100vw;
+  background-color: black;
+}
+
+.gallery-item > video {
+  height: 110vh;
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -39,5 +54,9 @@
     height: auto;
     gap: 5vh;
     padding-bottom: 5vh;
+  }
+
+  .gallery-item > img {
+    height: 40vh;
   }
 }
