--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@
 }
 
 #proj-container-grid img {
-  border-radius: 0.75rem;
+  /* border-radius: 0.75rem; */
 }
 #proj-container-col-1 .project:nth-child(odd) .img-cover,
 #proj-container-col-3 .project:nth-child(even) .img-cover,
@@ -49,7 +49,7 @@
 }
 
 #proj-container-full > .large > img {
-  border-radius: 0.75rem;
+  /* border-radius: 0.75rem; */
 }
 
 #proj-container-full > .contain > img {
@@ -100,6 +100,6 @@
   }
   #proj-container-full img {
     object-fit: cover !important;
-    border-radius: 0.5rem !important;
+    /* border-radius: 0.5rem !important; */
   }
 }
