--- a/style.css
+++ b/style.css
@@ -115,8 +115,12 @@ i {
     width: 100%;
     padding: 1vw;
     margin: auto;
+
     text-align: center;
     /* display: none; */
+  }
+  #io {
+    top: 1.75vw;
   }
 
   #works {
