--- a/project.css
+++ b/project.css
@@ -8,7 +8,7 @@
 .proj-el {
   display: flex;
   flex-direction: column;
-  padding: 0 1rem;
+  padding: 0 1.75vw;
   gap: 1vh;
   line-height: 1.25rem;
 }
@@ -57,6 +57,13 @@
     height: auto;
     gap: 5vh;
     padding-bottom: 5vh;
+  }
+
+  .proj-el {
+    padding: 0 2.75vw;
+  }
+  #proj-title {
+    line-height: 2.5rem;
   }
 
   .gallery-item > img {
