--- a/style.css
+++ b/style.css
@@ -25,9 +25,12 @@ body {
   /* overscroll-behavior: contain;
   overflow: hidden; */
   overflow-x: hidden;
-
-  user-select: none;
 }
+
+/* ::selection {
+  background: #f0ff65;
+  color: black;
+} */
 
 ::-webkit-scrollbar {
   display: none;
@@ -110,6 +113,7 @@ i {
   html,
   body {
     font-size: 18px;
+    overscroll-behavior: none;
   }
   .nav {
     width: 100%;
