--- a/project.css
+++ b/project.css
@@ -41,10 +41,14 @@
 .gallery-item:has(video) {
   background-color: black;
 }
-.gallery-item.side-by-side,
-.gallery-item.contain {
+.gallery-item.side-by-side {
   background-color: white;
   height: 100vh;
+}
+
+.gallery-item.contain {
+  background-color: white;
+  height: auto;
 }
 
 .full img,
