--- a/about.css
+++ b/about.css
@@ -68,6 +68,7 @@ span.char {
   gap: 2.5rem;
   padding: 1.75vw;
   padding-bottom: 3.5vw;
+  line-height: 1.5;
 }
 .cv-el-value > a {
   margin: 0;
