--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ i {
   html,
   body {
     font-size: 18px;
-    overscroll-behavior: none;
+    /* overscroll-behavior: none; */
   }
   .nav {
     width: 100%;
